--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/firebase": "^10.9.0",
     "express": "^4.18.3",
     "firebase": "^10.9.0",
+    "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
@@ -20,6 +23,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
+    "sass": "^1.72.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.5"
   }
